--- a/Seguros/Seguros/bin/Seguros.dll.config
+++ b/Seguros/Seguros/bin/Seguros.dll.config
@@ -8,6 +8,13 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="SegurosContext" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=segurosDB;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <!--<connectionStrings>
+    <add name="SegurosContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=SegurosContext-20140613003603; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SegurosContext-20140613003603.mdf" providerName="System.Data.SqlClient"/>
+  </connectionStrings>-->
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -74,9 +81,6 @@
   </system.codedom>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
